--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@
 buildscript {
 
     ext {
-        kotlinVersion = '1.3.61'
+        jvmTarget = "1.8"
+
+        kotlinVersion = '1.3.70'
         ktxVersion = '1.2.0'
         androidCoroutinesVersion = "1.3.3"
 
@@ -23,9 +25,9 @@ buildscript {
         retrofitCoroutinesVersion = "0.9.2"
         retrofitGsonVersion = "2.4.0"
 
-        koinVersion = "2.1.0"
+        daggerVersion = "2.26"
 
-        mockkVersion =  "1.9.2"
+        mockkVersion = "1.9.2"
         mockWebServerVersion = "2.7.5"
 
         jUnitVersion = "4.12"
