feat(details): add resources needed to load character details
Add activity layout, support strings, logic and manifest reference.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".details.DetailsActivity"></activity>
         <activity
-            android:name="com.leehendryp.maytheforcebewithleehendry.feed.presentation.view.MainActivity"
+            android:name=".feed.presentation.view.MainActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
