--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        dataBinding.enabled = true
-        viewBinding.enabled = true
     }
 
     buildTypes {
@@ -34,6 +31,11 @@ android {
 
     kotlinOptions {
         jvmTarget = rootProject.jvmTarget
+    }
+
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
 
 }
