--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        dataBinding.enabled = true
-        viewBinding.enabled = true
+        buildFeatures {
+            viewBinding true
+        }
     }
 
     buildTypes {
@@ -35,7 +36,6 @@ android {
     kotlinOptions {
         jvmTarget = rootProject.jvmTarget
     }
-
 }
 
 dependencies {
@@ -47,7 +47,7 @@ dependencies {
 
     // Android
     implementation "com.google.android.material:material:$rootProject.materialVersion"
-    implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
+    implementation "androidx.appcompat:appcompat:${appCompatVersion}"
     implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
     implementation "androidx.core:core-ktx:$rootProject.ktxVersion"
@@ -59,8 +59,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$rootProject.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycleVersion"
 
     // Retrofit
@@ -76,6 +76,8 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$rootProject.daggerVersion"
 
     // Tests
+    /*
+
     implementation "com.squareup.okhttp:mockwebserver:$rootProject.mockWebServerVersion"
 
     implementation "io.mockk:mockk:$rootProject.mockkVersion"
@@ -88,4 +90,5 @@ dependencies {
     testImplementation "junit:junit:$rootProject.jUnitVersion"
     androidTestImplementation "androidx.test.ext:junit:$rootProject.extJUnitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.expressoCoreVersion"
+     */
 }
