--- a/build.gradle
+++ b/build.gradle
@@ -5,35 +5,35 @@ buildscript {
     ext {
         jvmTarget = "1.8"
 
-        kotlinVersion = '1.3.70'
-        ktxVersion = '1.2.0'
-        androidCoroutinesVersion = "1.3.3"
+        kotlinVersion = '1.4.21'
+        ktxVersion = '1.3.2'
+        androidCoroutinesVersion = "1.4.1"
 
-        gradleVersion = '3.6.1'
+        gradleVersion = '4.1.0'
 
-        appCompatVersion = "1.1.0"
+        appCompatVersion = '1.2.0'
         recyclerVersion = "1.1.0"
-        materialVersion = "1.1.0"
-        constraintLayoutVersion = "1.1.3"
+        materialVersion = '1.2.1'
+        constraintLayoutVersion = '2.0.4'
 
         databindingVersion = "3.3.2"
-        roomVersion = "2.2.4"
-        navigationVersion = "2.2.1"
+        roomVersion = '2.2.6'
+        navigationVersion = '2.3.2'
         lifecycleVersion = "2.2.0"
 
-        retrofitVersion = "2.6.0"
+        retrofitVersion = '2.9.0'
         retrofitCoroutinesVersion = "0.9.2"
-        retrofitGsonVersion = "2.4.0"
+        retrofitGsonVersion = '2.9.0'
 
-        daggerVersion = "2.26"
+        daggerVersion = '2.30.1'
 
-        mockkVersion = "1.9.2"
+        mockkVersion = '1.10.3'
         mockWebServerVersion = "2.7.5"
 
-        jUnitVersion = "4.12"
-        extJUnitVersion = "1.1.1"
+        jUnitVersion = '4.13.1'
+        extJUnitVersion = '1.1.2'
         coreTestingVersion = "2.1.0"
-        expressoCoreVersion = "3.2.0"
+        expressoCoreVersion = '3.3.0'
 
         ktlintVersion = "0.29.0"
     }
